# porkroll

./: README.md  pigbin.zsh  porkroll.zsh
configs/: main.conf
lib/: rule_parser.zsh  template_management.zsh  util.zsh
patches/: 001-configure.in
src/: .gitignore
templates/2.9.7.6/alert/: detection_lib_meta.h  sid.c
templates/alert/: Makefile.am  rules.c  sid.c
util/: SnortRulesParse.py  mass-convert.py
